# sel4-musl-helloworld

./: .gitignore  CRUBY_BRINGUP_HISTORY.md  CRUBY_SEL4_PORTING_NOTES.md  CRUBY_STATIC_BUILD.md  README.md
apps/hello/: CMakeLists.txt  hello  hello.camkes
apps/hello/components/Hello/: CMakeLists.txt
apps/hello/components/Hello/ruby/: shell.rb
apps/hello/components/Hello/src/: hello.c  ruby_alloc.c  ruby_archive.c  ruby_platform.c  ruby_pthread.c
